# craftIk-Core

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  watchfox.c
craftIk/: CTBase.h  CTObject.c  CTObject.h  CTSetting.c  CTSetting.h  CTString.c  CTString.h  CTTypes.h  Makefile  Makefile.am  Makefile.in  main.c
craftIk-Map/: main.c
craftIk.xcodeproj/: project.pbxproj
craftIk/craftIk.xcodeproj/: project.pbxproj
craftIk/craftIk_core/: CTObject.c  CTObject.h  CTSetting.c  CTSetting.h  CTString.c  CTString.h  CTTypes.h  Makefile  Makefile.am  Makefile.in  main.c
craftIk/craftIk_core/craftIk-Core.xcodeproj/: project.pbxproj
craftIk/craftIk_map/: Makefile  Makefile.am  Makefile.in  main.c
craftIk/craftIk_map/craftIk-Map.xcodeproj/: project.pbxproj
craftIk/craftIk_run/: Makefile  Makefile.am  Makefile.in  WatchFox.c
craftIkWF.xcodeproj/: project.pbxproj
